# citibike

./: pyproject.toml  run
citibike/: main.py  settings.py
citibike/models/: db.py  gql.py
